<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="character_name">Character name</string>
    <string name="genre">Genre</string>
    <string name="campaign_name">Campaign name</string>
    <string name="level">Level</string>
    <string name="Lv10">Lv10</string>
    <string name="livello">livello</string>
    <string name="cm">cm</string>
    <string name="anni">anni</string>
    <string name="info">Info</string>
    <string name="crediti">Crediti</string>
    <string name="info_crediti">Info &amp; Crediti</string>
    <string name="edit">Edit</string>
    <string name="salva">Salva</string>
    <string name="notes">Notes</string>
    <string name="allineamento">Allineamento</string>
    <string name="scrivi_per_aggiungere">Scrivi per aggiungere</string>
    <string name="background">Background</string>
    <string name="crea">Crea</string>

    <string-array name="races">

        <item>Umano</item>
        <item>Nano</item>
        <item>Elfo</item>
        <item>Mezzelfo</item>
        <item>Mezzorco</item>
        <item>Halfling</item>
        <item>Dragonide</item>
        <item>Tiefling</item>
        <item>Gnomo</item>

    </string-array>

    <string-array name="classes">

        <item>Barbaro</item>
        <item>Bardo</item>
        <item>Chierico</item>
        <item>Druido</item>
        <item>Guerriero</item>
        <item>Ladro</item>
        <item>Mago</item>
        <item>Monaco</item>
        <item>Paladino</item>
        <item>Ranger</item>
        <item>Stregone</item>
        <item>Warlock</item>

    </string-array>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back_slash">/</string>
    <string name="_80">80</string>
    <string name="informazioni">Informazioni</string>
    <string name="skill_name">Skill name</string>
    <string name="mod_comp">mod comp:</string>
    <string name="_18">[18]</string>
    <string name="borsa_vuota">borsa vuota</string>
    <string name="add">add</string>
    <string name="crea_nuovo">crea nuovo</string>
    <string name="nome">Nome:</string>
    <string name="descrizione">Descrizione:</string>
    <string name="costo">Costo:</string>
    <string name="peso">Peso:</string>
    <string name="capacit">Capacità:</string>
    <string name="danno">Danno:</string>
    <string name="propriet">Proprietà:</string>
    <string name="tempo_per_togliere_l_armatura">Tempo per togliere\nl\'armatura:</string>
    <string name="tempo_per_mettere_l_armatura">Tempo per mettere\nl\'armatura:</string>
    <string name="forza_necessaria">Forza necessaria:</string>
    <string name="furtivit">Furtività:</string>
    <string name="ca">CA:</string>
    <string name="ntemp1">es: 3sec</string>
    <string name="ntemp2">es: 3min</string>
    <string name="es_1d4_mod_forza">es: 1d4 + mod forza</string>
    <string name="oro">Oro:</string>
    <string name="argento">Argento:</string>
    <string name="bronzo">Bronzo:</string>
    <string name="_0">0</string>
    <string name="Prova" />
    <string name="inganni">Inganni</string>
    <string name="livello_6">Livello 6</string>
    <string name="livello_9">Livello 9</string>
    <string name="livello_8">Livello 8</string>
    <string name="livello_7">Livello 7</string>
    <string name="livello_5">Livello 5</string>
    <string name="livello_4">Livello 4</string>
    <string name="livello_3">Livello 3</string>
    <string name="livello_2">Livello 2</string>
    <string name="livello_1">Livello 1</string>
    <string name="incantesimi">Incantesimi</string>
    <string name="db_access_error">Fallito accesso al database</string>
    <string name="db_insert_error">Fallito inserimento nel database</string>
    <string name="operation_error">Fallita operazione interna</string>
    <string name="abilita_assente_error">Abilità non presente nella lista del giocatore</string>
    <string name="aggiungi"> AGGIUNGI </string>
    <string name="non_equip">Non equipaggiata</string>
    <string name="spinner_prompt_abilita">Seleziona abilita da aggiungere</string>
    <string name="borsa_rimuovi_fallita">Aggiunta dell\'oggetto fallita</string>
    <string name="non_equipaggiabile">Equipaggiamento non equipaggiabile</string>
    <string name="arma">arma</string>
    <string name="armatura">armatura</string>
    <string name="scudo">scudo</string>

</resources>