<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:paddingHorizontal="20dp"
    android:paddingTop="15dp"
    tools:context=".ui.CreateNewItemActivity">

    <LinearLayout
        android:id="@+id/create_item_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Crea un nuovo oggetto"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="Inserisci gli elementi che lo compongono"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/create_item_type_selection_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_spinner"
            android:paddingHorizontal="15dp" />

        <Spinner
            android:id="@+id/create_item_subtype_selection_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_spinner"
            android:paddingHorizontal="15dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_item_button_cardview"
        android:layout_below="@+id/create_item_header"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/create_item_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/nome"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/create_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="textCapSentences"
                    android:maxLength="50"
                    android:paddingHorizontal="15dp"
                    android:text=""
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_item_desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/descrizione"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/create_item_desc"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="textCapSentences"
                    android:maxLength="50"
                    android:paddingHorizontal="15dp"
                    android:text=""
                    android:textSize="20sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:id="@+id/create_item_price_layout"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/costo"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/create_item_price"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:paddingHorizontal="15dp"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/create_item_weight_layout"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/peso"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/create_item_weight"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:paddingHorizontal="15dp"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/create_item_capacity_layout"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/capacit"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/create_item_capacity"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:paddingHorizontal="15dp"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/create_item_weapon_damage_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/danno"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/create_item_weapon_damage"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/es_1d4_mod_forza"
                    android:inputType="textCapSentences"
                    android:maxLength="50"
                    android:paddingHorizontal="15dp"
                    android:text=""
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_item_weapon_property_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_item_weapon_damage_layout"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/propriet"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/create_item_weapon_property"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="textCapSentences"
                    android:maxLength="50"
                    android:paddingHorizontal="15dp"
                    android:text=""
                    android:textSize="20sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:id="@+id/create_item_armor_CA_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ca"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/create_item_armor_CA"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:paddingHorizontal="15dp"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/create_item_armor_stealth_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/furtivit"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/create_item_armor_stealth"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:paddingHorizontal="15dp"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <LinearLayout
                    android:id="@+id/create_item_armor_time_off_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tempo_per_togliere_l_armatura"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/create_item_armor_time_off"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/ntemp1"
                        android:inputType="textCapSentences"
                        android:maxLength="50"
                        android:paddingHorizontal="15dp"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/create_item_armor_time_on_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tempo_per_mettere_l_armatura"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/create_item_armor_time_on"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/ntemp2"
                        android:inputType="textCapSentences"
                        android:maxLength="50"
                        android:paddingHorizontal="15dp"
                        android:text=""
                        android:textSize="20sp" />
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/create_item_armor_streight_needed_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forza_necessaria"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/create_item_armor_streight_needed"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="textCapSentences"
                    android:maxLength="50"
                    android:paddingHorizontal="15dp"
                    android:text=""
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/create_item_button_cardview"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@color/whitesmoke">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            app:cardCornerRadius="15dp">

            <Button
                android:id="@+id/create_item_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif"
                android:onClick="createNewItem"
                android:text="@string/crea"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>