<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_credit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    tools:context=".ui.InfoCreditsActivity">

    <RelativeLayout
        android:id="@+id/info_credits_header_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/info_credits_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:layout_marginStart="15dp"
            android:text="@string/info_crediti"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/info_credits_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/info_credits_header_relativelayout"
        android:background="@color/whitesmoke">

        <RelativeLayout
            android:id="@+id/info_credits_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/info_first_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="4dp"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/info"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/credits_first_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_first_card"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="4dp"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/credits"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/crediti"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>